NGP-TWC/wdp-abstract-canvas#1511 fix checkbox header spacing (#1537)

--- a/canvas_modules/common-canvas/assets/styles/flexible-table.scss
+++ b/canvas_modules/common-canvas/assets/styles/flexible-table.scss
@@ -154,6 +154,13 @@ $flexible-table-first-column-left-padding: 15px;
 	outline: none;
 }
 
+.reactable-column-header {
+	.checkbox {
+		margin-top: 0;
+		margin-bottom: 0;
+	}
+}
+
 .flexible-table-search-container {
 	width: 50%;
 	height: 30px;
